--- a/templates/admin_portal.html
+++ b/templates/admin_portal.html
@@ -26,5 +26,8 @@
             </div>
         </div>
         
+        <div class="action-buttons">
+            <a href="{{ url_for('add_user') }}" class="button">Add New User</a>
         </div>
+    </div>
 {% endblock %}
