--- a/templates/admin_portal.html
+++ b/templates/admin_portal.html
@@ -28,6 +28,7 @@
         
         <div class="action-buttons">
             <a href="{{ url_for('add_user') }}" class="button">Add New User</a>
+            <a href="{{ url_for('view_courses') }}" class="button">Manage Courses</a>
         </div>
     </div>
 {% endblock %}
