--- a/templates/add_enquiry.html
+++ b/templates/add_enquiry.html
@@ -15,7 +15,16 @@
         </div>
         <div class="form-group">
             <label for="course_interest">Course of Interest:</label>
-            <input type="text" id="course_interest" name="course_interest">
+            <select id="course_interest" name="course_interest">
+                <option value="">Select a Course</option>
+                {% for course in courses %}
+                    <option value="{{ course.name }}">{{ course.name }}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="joining_date">Tentative Joining/Follow-up Date:</label>
+            <input type="date" id="joining_date" name="joining_date">
         </div>
         <button type="submit">Submit Enquiry</button>
     </form>
