--- a/templates/receptionist_portal.html
+++ b/templates/receptionist_portal.html
@@ -6,4 +6,20 @@
     <h2>Welcome to the Receptionist Portal, {{ current_user.id }}</h2>
     <p>This is where you'll manage student admissions and fees.</p>
     <a href="{{ url_for('add_enquiry') }}">Add New Enquiry</a>
+    
+    <h3>Recent Enquiries</h3>
+    {% if enquiries %}
+        <ul>
+            {% for enquiry in enquiries %}
+                <li>
+                    <strong>Name:</strong> {{ enquiry.name }}<br>
+                    <strong>Contact:</strong> {{ enquiry.contact }}<br>
+                    <strong>Course Interest:</strong> {{ enquiry.course_interest }}<br>
+                    <strong>Status:</strong> {{ enquiry.status }}
+                </li>
+            {% endfor %}
+        </ul>
+    {% else %}
+        <p>No new enquiries.</p>
+    {% endif %}
 {% endblock %}
