--- a/templates/add_course.html
+++ b/templates/add_course.html
@@ -10,5 +10,6 @@
             <input type="text" id="course_name" name="course_name" required>
         </div>
         <button type="submit">Add Course</button>
+        <a href="{{ url_for('view_courses') }}" class="button">Back</a>
     </form>
 {% endblock %}
