--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -26,6 +26,7 @@
             </select>
         </div>
         <button type="submit">Create User</button>
+        <a href="{{ url_for('admin_portal') }}" class="button">Back</a>
     </form>
 </div>
 {% endblock %}
