--- a/templates/admin_portal.html
+++ b/templates/admin_portal.html
@@ -29,7 +29,10 @@
         <div class="action-buttons">
             <a href="{{ url_for('add_user') }}" class="button">Add New User</a>
             <a href="{{ url_for('manage_users') }}" class="button">Manage Users</a>
+            <a href="{{ url_for('manage_students') }}" class="button">Manage Students</a>
             <a href="{{ url_for('view_courses') }}" class="button">Manage Courses</a>
+            <a href="{{ url_for('financial_reports') }}" class="button">Financial Reports</a>
+            <a href="{{ url_for('institutional_settings') }}" class="button">Settings</a>
         </div>
     </div>
 {% endblock %}
