--- a/templates/manage_users.html
+++ b/templates/manage_users.html
@@ -24,8 +24,11 @@
                         <td class="px-4 py-2 font-medium text-gray-800">{{ user.username }}</td>
                         <td class="px-4 py-2">{{ user.role | capitalize }}</td>
                         <td class="px-4 py-2">
+                            <a href="{{ url_for('edit_user', user_id=user.id) }}" class="text-blue-600 hover:underline">Edit</a>
                             {% if user.role != 'admin' %}
-                                <a href="{{ url_for('delete_user', user_id=user.id) }}" class="text-red-600 hover:underline" onclick="return confirm('Are you sure you want to delete this user?');">Delete</a>
+                                <form action="{{ url_for('delete_user', user_id=user.id) }}" method="POST" onsubmit="return confirm('Are you sure you want to delete this user?');" class="inline">
+                                    <button type="submit" class="text-red-600 hover:underline ml-2">Delete</button>
+                                </form>
                             {% endif %}
                         </td>
                     </tr>
